# myflet

./: pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
myflet/: main.py
