[tool.poetry]
name = "myflet"
version = "0.1.0"
description = ""
authors = ["koji-ono_exwzd <koji.ono@exwzd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
flet = "^0.4.0"
pyinstaller = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
