[tool.poetry]
name = "myflet"
version = "0.1.0"
description = ""
authors = ["0h-n0 <kbu94982@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
flet = "^0.4.0"
pyinstaller = "5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
